--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="main.js"></script>
     <form action="action_page.php" method="post">
         <div class="container">
             <h1>Registreren</h1>
-            <label for="uname"><b>Gebruikersnaam:</b></label>
-            <input type="text" placeholder="Enter username:" name="uname" required>
-            <p id="uname"></p>
+            <label><b>Gebruikersnaam:</b></label>
+            <input id="uname" type="text" placeholder="Enter username:" name="uname" required>
+            <p id="unameWarning"></p>
 
-            <label for="psw"><b>Wachtwoord</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
-            <p id="psw"></p>
+            <label><b>Wachtwoord</b></label>
+            <input id="psw" type="password" placeholder="Enter Password" name="psw" required>
+            <p id="pswWarning"></p>
         </div>
     </form>
+    <script src="main.js"></script>
 </body>
 </html>
